--- a/app/scss/components/intro.scss
+++ b/app/scss/components/intro.scss
@@ -11,7 +11,7 @@
 
         i {
             margin-right: .25em;
-            color: $base-accent-color;
+            color: $blue;
         }
     }
 
