--- a/app/scss/components/mixins.scss
+++ b/app/scss/components/mixins.scss
@@ -15,7 +15,7 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
-@mixin radial-progress($circle-size, $inset-size, $circle-background, $circle-color, $inset-color: #fff) {
+@mixin radial-progress($circle-size, $inset-size, $circle-background, $circle-color, $inset-color: $white) {
     background: $circle-background;
     width: $circle-size;
     height: $circle-size;
