--- a/app/scss/shared-components/_buttons.scss
+++ b/app/scss/shared-components/_buttons.scss
@@ -7,45 +7,80 @@ input::-moz-focus-inner {
 }
 
 %button {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    border: 0;
-    border-radius: $border-radius-10;
-    cursor: pointer;
-    display: inline-block;
-    font-family: $font-family-body;
-    font-size: $font-size-30;
     -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    font-weight: bold;
-    line-height: 1.5em;
-    margin: 0 0 0.25rem 0;
-    padding: 0.5rem 1rem;
-    text-decoration: none;
-    vertical-align: bottom;
-
-    &:focus { outline: 0; }
-}
-
-// The standard button has the $color-brand colors
-.button,
-input[type=submit],
-button {
-    @extend %button;
-    background: $color-brand-50;
+    background-color: $light-gray;
+    border-radius: 1px solid $border-radius-10;
     color: $white;
+    display: inline-block;
+    font-size: 1rem;
+    font-weight: bold;
+    line-height: 1;
+    padding: .75em 1em;
+    text-decoration: none;
 
     &:hover {
-        background: $color-brand-60;
+        //background-color: $hover-button-color;
         color: $white;
     }
 
-    &:active,
-    &:focus {
-        box-shadow: inset 0 1px 3px rgba($black, 0.2);
+    &:disabled {
+        cursor: not-allowed;
+        opacity: .5;
     }
 }
+
+button,
+input[type='submit'] {
+    @extend %button;
+    @include appearance(none);
+    border: 0;
+    cursor: pointer;
+    user-select: none;
+    vertical-align: middle;
+    white-space: nowrap;
+}
+
+// %button {
+//     -webkit-appearance: none;
+//     -moz-appearance: none;
+//     appearance: none;
+//     border: 0;
+//     border-radius: $border-radius-10;
+//     cursor: pointer;
+//     display: inline-block;
+//     font-family: $font-family-body;
+//     font-size: $font-size-30;
+//     -webkit-font-smoothing: antialiased;
+//     -moz-osx-font-smoothing: grayscale;
+//     font-weight: bold;
+//     line-height: 1.5em;
+//     margin: 0 0 0.25rem 0;
+//     padding: 0.5rem 1rem;
+//     text-decoration: none;
+//     vertical-align: bottom;
+
+//     &:focus { outline: 0; }
+// }
+
+
+// The standard button has the $color-brand colors
+// .button,
+// input[type=submit],
+// button {
+//     @extend %button;
+//     background: $color-brand-50;
+//     color: $white;
+
+//     &:hover {
+//         background: $color-brand-60;
+//         color: $white;
+//     }
+
+//     &:active,
+//     &:focus {
+//         box-shadow: inset 0 1px 3px rgba($black, 0.2);
+//     }
+// }
 
 .button--neutral,
 input[type=submit].button--neutral,
