--- a/app/scss/theme/variables.scss
+++ b/app/scss/theme/variables.scss
@@ -12,16 +12,16 @@ $badge-radius:                          .3em;
 
 
 // layout formatting
-$header-height:                         modular-scale(1rem, 2, $octave);
+$header-height:                         modular-scale(1, 3.75rem, $octave);
 $layout-columns:                        24;
 $layout-menu-col:                       5;
 $layout-main-col-w:                     19;
 $layout-main-col-r:                     13;
 $layout-details-col:                    6;
 
-$header-title-size:                     modular-scale(1rem, 1, $octave);
-$layout-menu-size:                      modular-scale(1rem, 1, $minor-third);
-$layout-menu-header-size:               modular-scale(1rem, 1, $octave);
+$header-title-size:                     modular-scale(1, 1rem, $octave);
+$layout-menu-size:                      modular-scale(1, 1rem, $minor-third);
+$layout-menu-header-size:               modular-scale(1, 1rem, $octave);
 $layout-feedback-size:                  1.2em;
 $layout-feedback-padding:               .5em 0;
 $layout-feedback-height:                3.5em;
@@ -33,21 +33,21 @@ $header-account-img-size:               3em;
 $header-account-img-pad:                .5em;
 
 // login formatting
-$login-font-size:                       modular-scale(1rem, 1, $perfect-fifth);
-$login-title-font-size:                 modular-scale(1rem, 2, $octave);
-$login-subtitle-font-size:              modular-scale(1rem, 1, $major-tenth);
+$login-font-size:                       modular-scale(1, 1rem, $perfect-fifth);
+$login-title-font-size:                 modular-scale(1, 2rem, $octave);
+$login-subtitle-font-size:              modular-scale(1, 1rem, $major-tenth);
 
 // loader formatting
-$loader-font-size:                      modular-scale(1rem, 1, $perfect-fifth);
+$loader-font-size:                      modular-scale(1, 1rem, $perfect-fifth);
 
 // section formatting
-$section-header-font-size:              modular-scale(1rem, 1, $perfect-fifth);
+$section-header-font-size:              modular-scale(1, 1rem, $perfect-fifth);
 $section-header-icon-top:               .5em;
-$section-header-icon-size:              modular-scale(1rem, 1, $octave);
+$section-header-icon-size:              modular-scale(1, 1rem, $octave);
 $section-header-input-width:            20em;
 $section-list-side-padding:             1em;
-$section-list-icon-left:                $header-height / $section-header-font-size / 5 * 1em;
-$section-list-icon-left-invert:         $header-height / $section-header-font-size / 5 * 1.13em;
+$section-list-icon-left:                $header-height / $section-header-font-size / 5 * 1;
+$section-list-icon-left-invert:         $header-height / $section-header-font-size / 5 * 1.13;
 $section-list-text-pad:                 $section-list-icon-left;
 $section-list-icon-text-pad:            modular-scale($section-list-icon-left, 3, $major-seventh);
 $section-list-input-width:              10em;
@@ -77,22 +77,22 @@ $content-list-det-actions-top:          .7em;
 
 $content-list-1-button-margin-top:      .3em;
 $content-list-1-select-margin-top:      .2em;
-$content-list-item-1-height:            modular-scale(1rem, 2, $minor-seventh);
-$content-list-item-1-font-size:         modular-scale(1rem, 1, $perfect-fourth);
-$content-list-item-1-icon-size:         modular-scale(1rem, 1, $minor-seventh);
+$content-list-item-1-height:            modular-scale(1, 2rem, $minor-seventh);
+$content-list-item-1-font-size:         modular-scale(1, 1rem, $perfect-fourth);
+$content-list-item-1-icon-size:         modular-scale(1, 1rem, $minor-seventh);
 $content-list-item-1-progress-size:     1.75em; // to avoid rounding errors we make this a simple number
 $content-list-item-1-icon-top:          .4em;
 $content-list-item-1-icon-left:         1.25;
 $content-list-item-1-com-font-size:     1rem;
-$content-list-item-action-icon-size:    modular-scale(1rem, 1, $minor-sixth);
+$content-list-item-action-icon-size:    modular-scale(1, 1rem, $minor-sixth);
 $content-list-item-action-icon-top:     .1em;
 
 $content-list-2-button-margin-top:      .27em;
 $content-list-2-select-margin-top:      .17em;
-$content-list-item-2-height:            modular-scale(1rem, 2, $major-sixth);
-$content-list-item-2-det-height:        modular-scale(1rem, 3, $major-sixth);
-$content-list-item-2-font-size:         modular-scale(1rem, 1, $minor-third);
-$content-list-item-2-icon-size:         modular-scale(1rem, 1, $minor-seventh);
+$content-list-item-2-height:            modular-scale(1, 2rem, $major-sixth);
+$content-list-item-2-det-height:        modular-scale(1, 3rem, $major-sixth);
+$content-list-item-2-font-size:         modular-scale(1, 1rem, $minor-third);
+$content-list-item-2-icon-size:         modular-scale(1, 1rem, $minor-seventh);
 $content-list-item-2-progress-size:     1.5em; // to avoid rounding errors we make this a simple number
 $content-list-item-2-icon-top:          .25em;
 $content-list-item-2-icon-left:         1.75;
