--- a/app/scss/theme/responsive.scss
+++ b/app/scss/theme/responsive.scss
@@ -1,23 +1,23 @@
 // breakpoints
-$full-menu-min-size-bp:           new-breakpoint(max-width 67em);
-$full-menu-max-size-bp:           new-breakpoint(min-width 82em);
-$full-menu-min-size:              14em;
-$full-menu-max-size:              17em;
+$full-menu-min-size-bp:           new-breakpoint(max-width 67rem);
+$full-menu-max-size-bp:           new-breakpoint(min-width 82rem);
+$full-menu-min-size:              14rem;
+$full-menu-max-size:              17rem;
 
-$full-filter-size-bp-1-no-act:    new-breakpoint(max-width 54em);
-$full-filter-size-bp-2:           new-breakpoint(max-width 94em);
+$full-filter-size-bp-1-no-act:    new-breakpoint(max-width 54rem);
+$full-filter-size-bp-2:           new-breakpoint(max-width 94rem);
 
-$full-title-size-bp-1:            new-breakpoint(max-width 87em);
+$full-title-size-bp-1:            new-breakpoint(max-width 87rem);
 
-$full-list-item-title-size-bp-1:  new-breakpoint(max-width 87em);
-$full-list-item-title-size-bp-2:  new-breakpoint(max-width 65em);
+$full-list-item-title-size-bp-1:  new-breakpoint(max-width 87rem);
+$full-list-item-title-size-bp-2:  new-breakpoint(max-width 65rem);
 
 
 @include media($full-menu-min-size-bp) {
     div.layout {
 
         > header .title {
-            width: ($full-menu-min-size / $header-title-size) * 1em;
+            width: ($full-menu-min-size / $header-title-size) * 1;
         }
 
         > nav {
