--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -4,43 +4,39 @@
 'bourbon',
 
 // Core
-"core/_settings", // Set up your settings and variables first
-"core/_grid",
-"core/_base",
-"core/_states",
-"core/_layout",
+'core/settings', // Set up your settings and variables first
+'core/grid',
+'core/base',
+'core/states',
+'core/layout',
 
 'neat',
 
 // Shared components
 // Components can be used generic through the application and are not connected to content.
 // Example: the component 'buttons' can be used in module 'product', 'blog-article' etc.
-"shared-components/_buttons",
-"shared-components/_figure",
-"shared-components/_forms",
-"shared-components/_icons",
-"shared-components/_labels",
-"shared-components/_list",
-"shared-components/_messages",
-"shared-components/_pagination",
-"shared-components/_panels",
-"shared-components/_quote",
-"shared-components/_tables",
-"shared-components/_tabs",
+'shared-components/buttons',
+'shared-components/figure',
+'shared-components/forms',
+'shared-components/icons',
+'shared-components/labels',
+'shared-components/list',
+'shared-components/messages',
+'shared-components/pagination',
+'shared-components/panels',
+'shared-components/quote',
+'shared-components/tables',
+'shared-components/tabs',
 
 
 // Modules
 // Modules are connected to a specific piece of content and can't be used without that piece of content.
 // Example: the module 'product' can't be used for a 'blog-article'.
-"modules/_product",
+'modules/product',
 
 
 // Pattern library (a kind of styleguide)
-"core/_pattern-library",
-
-
-// Print
-"core/_print";
+'core/pattern-library';
 
 
 //  ========== OLD styles
